<resources>
    //main
    <string name="app_name">GameDead</string>
    <string name="BTNLOGIN">LOGIN</string>
    <string name="BTNREGISTRAR">REGISTRO</string>
    //registro
    <string name="correoET">Correo electrónico</string>
    <string name="passET">Contraseña</string>
    <string name="nombreET">Nombre</string>
    <string name="edadET">Edad</string>
    <string name="paisET">Pais</string>
    <string name="fechaTxt">Fecha</string>
    <string name="registrarBt">Registrar</string>


    <string name="correoLogin">Correo electronico</string>
    <string name="passLogin">Contraseña</string>
    <string name="BtnLogin">INGRESAR</string>

    <!---MENU-->
    <string name="MiPerfiltxt">Mi Perfil</string>
    <string name="MiPuntuaciontxt">Mi Puntuacion</string>
    <string name="Zombies"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo"> -- </string>
    <string name="nombre"> -- </string>
    <string name="edad"> -- </string>
    <string name="pais"> -- </string>
    <string name="fecha"> -- </string>



    <string name="Menutxt">Menu</string>

    <string name="JugarBtn">Jugar</string>
    <string name="EditarBtn">Editar</string>
    <string name="CambiarPassBtn">Cambiar Contrasena</string>
    <string name="PuntuacionesBtn">Puntuaciones</string>
    <string name="AcercaDeBtn">Acerca de</string>
    <string name="CerrarSesionBtn">Cerrar Sesion</string>

    <!--ESCENARIO-->
    <string name="TvContador"> 0 </string>
    <string name="TvNombre"> ---- </string>
    <string name="TvTiempo"> 0S </string>
     <!--PANTALLA-->
    <string name="AnchoTv"></string>
    <string name="AltoTv"></string>

    <!--GAMEOVER-->
    <string name="SeacaboTXT">¡Se termino el tiempo!</string>
    <string name="HasmatadoTXT">Zombies Muertos</string>
    <string name="NumeroTXT">--</string>
    <string name="JUEGARDENUEVO">JUGAR DE NUEVO</string>
    <string name="IRMENU">MENU</string>
    <string name="PUNTAJES">VER PUNTAJES</string>



</resources>