<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".EscenarioJuego">


    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>


        <!--INFORMACION-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!--X-->
            <TextView
                android:id="@+id/AnchoTv"
                android:text="@string/AnchoTv"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Y-->
            <TextView
                android:id="@+id/AltoTv"
                android:text="@string/AltoTv"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/aplastados"
            android:layout_width="80dp"
            android:layout_marginTop="-10dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"/>

    <!--CONTADOR-->
        <TextView
            android:id="@+id/TvContador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:text="@string/TvContador"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

    <!--NOMBRE JUGADOR-->
        <TextView
            android:id="@+id/TvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:text="@string/TvNombre"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <!--ANIMACIÓN-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="250dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="tiempo.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>

    <!--TIEMPO-->
        <TextView
            android:id="@+id/TvTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:text="@string/TvTiempo"
            android:textColor="#ffffff"
            android:textSize="20sp" />


        <!--ZOMBIE-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IvZombie"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/zombie2" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"/>


</RelativeLayout>